manifests/kubernetes-infrastructure/grafana/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: loki-grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana
  namespace: default
  annotations:
    # General:
    # kubernetes.io/ingress.class: traefik
    #
    # TLS configuration:
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    #
    # Middleware:
    # traefik.ingress.kubernetes.io/router.middlewares:my-middleware@kubernetescrd
spec:
  rules:
    - host: "grafana.labitup.one"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 3000
